adicionei algumas fontes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h1>Cordel Moderno</h1>
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
-
+    <main>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam corrupti velit illum facilis. Voluptas dicta molestias laudantium facere illum quo nihil vero quis sapiente eos veritatis expedita quam, eligendi fugit!</p>
+    </main>
 </body>
 </html>
