--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
     <main>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam corrupti velit illum facilis. Voluptas dicta molestias laudantium facere illum quo nihil vero quis sapiente eos veritatis expedita quam, eligendi fugit!</p>
+        <section id="p1">
+            <p>Estou ficando cansado</p>
+            <p>Da tal tecnologia</p>
+            <p>Só se fala por e-mail</p>
+            <p>Mensagem curta e fria</p>
+            <p>Twitter e Facebook</p>
+            <p>Antes que eu caduque</p>
+            <p>Vou dizer tudo em poesia.</p>
+        </section>
+
+        <section id="container" class="fundo1">
+            <article id="conteudo" class="conteudo">
+                Não é mais como era antes
+                É tudo abreviado
+                "Você" só tem duas letras
+                O "O" e o "E" foi riscado
+                Para declarar o amor
+                Basta botar uma flor
+                E um coração desenhado.
+            </article>
+        </section>
+
+        <section id="container" class="fundo2">
+            <article id="conteudo" class="conteudo">
+
+            </article>
+        </section>
     </main>
 </body>
 </html>
