Correção e alinhamento de imagemCorreção e alinhamento de imagem

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
     </section>
 
-    <section>
+    <section id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
