--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>
     </section>
 
-    <section>
+    <section id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
